--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Lei Liu
 # tagline: Here is personal website of Lei Liu. Powered by Jekyll, based on the Minimal Mistakes theme.
 # description: Two roads diverged in woods, I took the one less traveled by.
 
-url: https://Haishen-ll.github.io
+url: https://Oceans537.github.io
 
 # Owner/author information
 owner:
