--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Lei Liu
+title: Lei Liu‘s Homepage
 # tagline: Here is personal website of Lei Liu. Powered by Jekyll, based on the Minimal Mistakes theme.
 # description: Two roads diverged in woods, I took the one less traveled by.
 
